# AIS-Parse

./: CMakeLists.txt  README.md  Time.cpp  a  draw3D.cpp  draw3D.h  file.cpp  file.h  readme  test.cpp  type_haddle.cpp  type_haddle.h
include/: AISPare.h  Time.h  boatlog.h  file.h  log_haddle.h  speedStdRep.h  split.h  type_haddle.h
src/: AISPare.cpp  Time.cpp  boatlog.cpp  file.cpp  log_haddle.cpp  main.cpp  speedStdRep.cpp  split.cpp  type_haddle.cpp
